# febraban_barcode

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: pipeline.yml  publish.yml
docs/: index.md
febraban_barcode/: __init__.py  base64.py  constants.py  functions.py  image.py  modulo10.py  modulo11.py  retorno.py
febraban_barcode/retorno/: __init__.py  layout5.py
specs/: Modelo arquivo retorno tipo G.txt
tests/: test_barcode.py  test_base64.py  test_base64_png_func.py  test_base64_svg_func.py  test_calc_dac_modulo10_func.py  test_calc_dac_modulo11_func.py  test_calcular_dac_func.py  test_decode_barcode.py  test_decode_codigo_de_barras_func.py  test_gerar_numeracao_codigo_de_barras_func.py  test_html_base64_img_func.py  test_image.py  test_image_png_func.py  test_image_svg_func.py  test_layout5.py  test_linha_digitavel.py  test_modulo_10.py  test_modulo_11.py  test_registro_a_func.py  test_registro_g_func.py  test_registro_z_func.py
