[tool.poetry]
name = "febraban-barcode"
version = "0.1.0"
description = ""
authors = ["William Sampaio <1997wbms@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "febraban_barcode"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
blue = "^0.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
